debut projet hello world

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,5 +4,8 @@ index:
 
 
 test:
-    path: /test
+    path: /test/{age<\d+>?0 }
     controller: App\Controller\TestController::test
+    methods: [GET, POST]
+    host: localhost
+    schemes: [http , https]
